--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,6 +3,11 @@
   flex-flow: column wrap;
 }
 
+.Centered {
+  text-align: center;
+  margin: 3rem 0 2rem;
+}
+
 .WeatherCard {
   display: inline-grid;
   margin: 5px !important;
